Fix vertical alignment for toggle arrows

--- a/packages/bvaughn-architecture-demo/components/console/filters/EventType.module.css
+++ b/packages/bvaughn-architecture-demo/components/console/filters/EventType.module.css
@@ -31,4 +31,5 @@
   fill: var(--collapsible-toggle-color);
   width: 1rem;
   height: 1rem;
+  vertical-align: middle;
 }
