--- a/packages/bvaughn-architecture-demo/components/inspector/HTMLExpandable.module.css
+++ b/packages/bvaughn-architecture-demo/components/inspector/HTMLExpandable.module.css
@@ -27,6 +27,7 @@
   transform-origin: 0.5rem 0.5rem;
   transition: transform 200ms;
   display: inline-block;
+  vertical-align: middle;
 }
 .ArrowExpanded {
   transform: rotate(90deg);
